--- a/package.json
+++ b/package.json
@@ -14,13 +14,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@types/node": "^8.0.47",
-    "express": "^4.16.2",
-    "mkdirp": "^0.5.1",
-    "nodemon": "^1.12.1",
-    "sharp": "^0.18.4"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^8.0.47",
     "co": "^4.6.0",
@@ -28,6 +22,11 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-promise": "^3.6.0",
+    "express": "^4.16.2",
+    "mkdirp": "^0.5.1",
+    "nodemon": "^1.12.1",
+    "recursive-readdir": "^2.2.1",
+    "sharp": "^0.18.4",
     "tsc": "^1.20150623.0",
     "typescript": "^2.5.3",
     "typescript-eslint-parser": "^8.0.1"
