--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,12 @@
     "sourceMap": true
   },
   "files": [
+    "./node_modules/@types/mocha/index.d.ts",
     "./node_modules/@types/node/index.d.ts"
   ],
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "tests/**/*.ts"
   ],
   "exclude": [
     "node_modules"
